--- a/fleet/pom.xml
+++ b/fleet/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<artifactId>vendsuite</artifactId>
+		<groupId>com.packapuff</groupId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>com.packapuff.vendsuite</groupId>
 	<artifactId>fleet</artifactId>
@@ -16,7 +15,6 @@
 	<properties>
 		<java.version>17</java.version>
 		<hypersistence.version>3.1.1</hypersistence.version>
-		<spring-cloud.version>4.0.1</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,17 +57,6 @@
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 	</dependencies>
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>org.springframework.cloud</groupId>
-				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>${spring-cloud.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
 
 	<build>
 		<plugins>
