--- a/common/event_models/pom.xml
+++ b/common/event_models/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>vendsuite</artifactId>
-		<groupId>com.packapuff</groupId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
+<!--	<parent>-->
+<!--		<artifactId>vendsuite</artifactId>-->
+<!--		<groupId>com.packapuff</groupId>-->
+<!--		<version>1.0-SNAPSHOT</version>-->
+<!--		<relativePath>../../pom.xml</relativePath>-->
+<!--	</parent>-->
 	<groupId>com.packapuff.vendsuite.common</groupId>
 	<artifactId>event_models</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -15,24 +15,30 @@
 	<description>Event models for VendSuite</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jetbrains</groupId>
 			<artifactId>annotations</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 	</dependencies>
 
