--- a/common/exception_handler/pom.xml
+++ b/common/exception_handler/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>vendsuite</artifactId>
-		<groupId>com.packapuff</groupId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../../pom.xml</relativePath>
-	</parent>
+<!--	<parent>-->
+<!--		<artifactId>vendsuite</artifactId>-->
+<!--		<groupId>com.packapuff</groupId>-->
+<!--		<version>1.0-SNAPSHOT</version>-->
+<!--		<relativePath>../../pom.xml</relativePath>-->
+<!--	</parent>-->
 	<groupId>com.packapuff.vendsuite.common</groupId>
 	<artifactId>exception_handler</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -15,25 +15,36 @@
 	<description>Exception handler library for VendSuite</description>
 	<properties>
 		<java.version>17</java.version>
+		<maven.compiler.source>17</maven.compiler.source>
+		<maven.compiler.target>17</maven.compiler.target>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+			<version>RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+			<version>RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+			<version>RELEASE</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-        </dependency>
+			<version>RELEASE</version>
+		</dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-        </dependency>
+			<version>RELEASE</version>
+		</dependency>
         <dependency>
             <groupId>com.packapuff.vendsuite.common</groupId>
             <artifactId>error_library</artifactId>
